# tmesh

./: README.md  USAGE.md  pyproject.toml
src/tmcli/: __main__.py
src/tmcli/benchmark/: bench.py  model_configs.json
tensormesh/cli/: __main__.py
tensormesh/cli/benchmark/: bench.py
