[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tm-cli"
version = "0.1.0"
description = "TensorMesh CLI tool suite"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
tm-cli = "tmcli.__main__:main"

[tools.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"tmcli.benchmark" = ["model_configs.json"]

[tools.setuptools.package.find]
where = ["src"]


